<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodrunner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_myProfile"
        android:name="com.example.foodrunner.ui.myProfile.MyProfileFragment"
        android:label="@string/menu_myProfile"
        tools:layout="@layout/fragment_myprofile" />

    <fragment
        android:id="@+id/nav_favouriteRestaurants"
        android:name="com.example.foodrunner.ui.favouriteRestaurants.FavouriteFragment"
        android:label="@string/menu_favouriteRestaurants"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_FAQs"
        android:name="com.example.foodrunner.ui.FAQs.FAQsFragment"
        android:label="@string/menu_FAQs"
        tools:layout="@layout/fragment_faqs" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.foodrunner.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_orderHistory"
        android:name="com.example.foodrunner.ui.orderHistory.OrderHistoryFragment"
        android:label="@string/menu_moh"
        tools:layout="@layout/fragment_order_history" />
</navigation>